--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  margin: 10px;
+  text-align: center;
+}
+.Nav-expand {
+  display: grid;
+  
+  margin-bottom: 5px;
+  justify-content: space-around;
+}
+.Nav {
+  display: grid;
+  grid-template-columns: repeat(4, 35px);
+  grid-template-rows: repeat(1, 20px);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-bottom: 1px;
 }
-
-.App-link {
-  color: #61dafb;
+.Messages {
+  text-align: center;
+  justify-content: center;
+  height: 60px;
+  width: 250px;
+  margin: auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4 {
+  margin: 6px;
+}
+.Box {
+  background-color: yellow;
+  visibility: visible;
+  border: 1px solid black;
+  width: 45px;
+  height: 20px;
+  font-size: 12px;
+  font-weight: bold;
+}
+.Box-expand {
+  background-color: green;
+  border: 1px solid black;
+  width: 45px;
+  height: 20px;
+  font-size: 12px;
+  font-weight: bold;
+  justify-content: space-around;
+}
+.Side-section {
+  display:  flex;
+  border: 1px solid black;
+  justify-content: space-around;
+}
+.Corner-section {
+  display:  flex;
+  border: 1px solid black; 
+  justify-content: space-around;
+}
+.Side {
+  border: 1px solid black;
+  width:  160px;
+}
+.Corner {
+  border: 1px solid black;
+  width:  80px;
+}
+.Hand {
+  border: 1px solid black;
+  margin-top: 0px;
+}
+.Button:hover {
+  background-color: blue;
+} 
+.img-card {
+  width: 75px;
 }
