--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,13 @@
   margin: 10px;
   text-align: center;
 }
+.Title {
+  color: blue;
+  font-size: 20px;
+  font-weight: bold;
+}
 .Nav-expand {
   display: grid;
-  
   margin-bottom: 5px;
   justify-content: space-around;
 }
