--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ h4 {
   width: 45px;
   height: 20px;
   font-size: 12px;
+  color: white;
   font-weight: bold;
   justify-content: space-around;
 }
