4 expand buttons styling

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   font-weight: bold;
 }
 .Nav-expand {
-  display: grid;
+  display: flex;
   margin-bottom: 5px;
   justify-content: space-around;
 }
