--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ h4 {
   background-color: green;
   border: 1px solid black;
   width: 45px;
-  height: 20px;
+  height: 15px;
   font-size: 12px;
   color: white;
   font-weight: bold;
@@ -75,6 +75,9 @@ h4 {
 }
 .Button:hover {
   background-color: blue;
+} 
+.Card {
+  border: 2px solid black;
 } 
 .img-card {
   width: 75px;
