--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 .Nav {
   display: grid;
-  grid-template-columns: repeat(4, 95px);
+  grid-template-columns: repeat(5, 95px);
   grid-template-rows: repeat(1, 20px);
   justify-content: center;
   align-items: center;
@@ -39,6 +39,15 @@ h4 {
   visibility: visible;
   border: 1px solid black;
   width: 90px;
+  height: 20px;
+  font-size: 12px;
+  font-weight: bold;
+}
+.Box2 {
+  background-color: pink;
+  visibility: visible;
+  border: 1px solid black;
+  width: 130px;
   height: 20px;
   font-size: 12px;
   font-weight: bold;
