--- a/src/App.css
+++ b/src/App.css
@@ -44,10 +44,10 @@ h4 {
   font-weight: bold;
 }
 .Box2 {
-  background-color: pink;
+  background-color: lightgreen;
   visibility: visible;
   border: 1px solid black;
-  width: 130px;
+  width: 80px;
   height: 20px;
   font-size: 12px;
   font-weight: bold;
