--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ h4 {
   font-weight: bold;
 }
 .Box2 {
-  background-color: lightgreen;
+  background-color: green;
   visibility: visible;
   border: 1px solid black;
   width: 95px;
