--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@ h4 {
   background-color: yellow;
   visibility: visible;
   border: 1px solid black;
-  width: 90px;
-  height: 20px;
+  max-width: 90px;
+  max-height: 20px;
   font-size: 12px;
   font-weight: bold;
 }
@@ -47,8 +47,8 @@ h4 {
   background-color: lightgreen;
   visibility: visible;
   border: 1px solid black;
-  width: 95px;
-  height: 20px;
+  max-width: 95px;
+  max-height: 20px;
   font-size: 12px;
   font-weight: bold;
 }
